--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,13 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "chromadb>=1.0.20",
     "fastapi>=0.116.1",
+    "langchain>=0.3.27",
+    "psycopg2-binary>=2.9.10",
     "pydantic>=2.11.7",
+    "python-dotenv>=1.1.1",
+    "sentence-transformers>=5.1.0",
+    "sqlalchemy>=2.0.43",
+    "uvicorn>=0.35.0",
 ]
