add weather tool, handle best match with fuzz

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "psycopg2-binary>=2.9.10",
     "pydantic>=2.11.7",
     "python-dotenv>=1.1.1",
+    "rapidfuzz>=3.14.1",
     "sentence-transformers>=5.1.0",
     "sqlalchemy>=2.0.43",
     "uvicorn>=0.35.0",
