--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "aiocsv>=1.3.2",
+    "aiofiles>=24.1.0",
     "aiohttp>=3.12.15",
     "chromadb>=1.0.20",
     "fastapi>=0.116.1",
