--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "aiocsv>=1.3.2",
     "aiofiles>=24.1.0",
     "aiohttp>=3.12.15",
+    "alembic>=1.16.5",
     "asyncpg>=0.30.0",
     "chromadb>=1.0.20",
     "langchain>=0.3.27",
