add adapters(celery, http, in_process) to wrap tools for agent,  update register tools, add factories for mapping tool name, add celery and worker for runing tasks

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "aiohttp>=3.12.15",
     "alembic>=1.16.5",
     "asyncpg>=0.30.0",
+    "celery>=5.5.3",
     "chromadb>=1.0.20",
     "langchain>=0.3.27",
     "pandas>=2.3.2",
