use fastmcp for register instead of manual setup, store manual setup in manual folder, add test for fastmcp

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,13 +12,17 @@ dependencies = [
     "asyncpg>=0.30.0",
     "celery>=5.5.3",
     "chromadb>=1.0.20",
+    "fastapi>=0.116.2",
+    "fastmcp>=2.12.3",
     "langchain>=0.3.27",
     "pandas>=2.3.2",
     "psycopg2-binary>=2.9.10",
     "pydantic>=2.11.7",
     "pydantic-settings>=2.10.1",
+    "pytest>=8.4.2",
     "python-dotenv>=1.1.1",
     "rapidfuzz>=3.14.1",
+    "redis>=6.4.0",
     "sentence-transformers>=5.1.0",
     "sqlalchemy>=2.0.43",
 ]
