--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,49 +21,49 @@ services:
     ports:
       - "6379:6379"
 
-  chroma:
-    image: chromadb/chroma:latest
-    container_name: chroma
-    restart: always
-    volumes:
-      - ./chroma_data:/chroma/chroma
-    ports:
-      - "8000:8000"
-
   app:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name: app
     restart: always
     depends_on:
       - postgres
       - redis
-      - chroma
     environment:
       DATABASE_URL: ${DATABASE_URL}
       REDIS_URL: ${REDIS_URL}
-      CHROMA_DB_PATH: /chroma/chroma
+      CHROMA_DB_PATH: /app/chroma_data  
+      EMBEDDING_MODEL: intfloat/multilingual-e5-base
     volumes:
-      - .:/app
       - ./logs:/app/logs
-      - ./chroma_data:/chroma/chroma
-    command: python -m src
+      - ./hf_cache:/root/.cache/huggingface 
+      - ./chroma_data:/app/chroma_data
+    command: python main.py
+    ports:
+      - "8000:8000"
 
-  worker:
-    build: .
-    container_name: celery_worker
+  celery:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: celery
     restart: always
     depends_on:
       - redis
-      - app
+      - postgres
     environment:
       DATABASE_URL: ${DATABASE_URL}
       REDIS_URL: ${REDIS_URL}
-      CHROMA_DB_PATH: /chroma/chroma
+      CHROMA_DB_PATH: /app/chroma_data
+      EMBEDDING_MODEL: intfloat/multilingual-e5-base
     volumes:
-      - .:/app
       - ./logs:/app/logs
-      - ./chroma_data:/chroma/chroma
+      - ./hf_cache:/root/.cache/huggingface
+      - ./chroma_data:/app/chroma_data
     command: celery -A src.services.worker worker -l info
 
 volumes:
   postgres_data:
+  hf_cache:
+  chroma_data:
