--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ dependencies = [
     "fastapi>=0.116.2",
     "fastmcp>=2.12.3",
     "langchain>=0.3.27",
+    "langchain-community>=0.3.29",
+    "langgraph>=0.6.7",
     "pandas>=2.3.2",
     "psycopg2-binary>=2.9.10",
     "pydantic>=2.11.7",
