--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "fastmcp>=2.12.3",
     "langchain>=0.3.27",
     "langchain-community>=0.3.29",
+    "langchain-ollama>=0.3.8",
     "langgraph>=0.6.7",
     "pandas>=2.3.2",
     "psycopg2-binary>=2.9.10",
