--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,8 +75,10 @@ dependencies = [
     "kombu==5.5.4",
     "kubernetes==33.1.0",
     "langchain==0.3.27",
+    "langchain-chroma>=0.2.6",
     "langchain-community==0.3.29",
     "langchain-core==0.3.76",
+    "langchain-huggingface>=0.3.1",
     "langchain-ollama>=0.3.8",
     "langchain-text-splitters==0.3.11",
     "langgraph==0.6.7",
